# DraftCraft

./: .gitignore  CMakeLists.txt
Classes/: AppDelegate.cpp  (+1 more)
proj.draftcraft_models/: CMakeLists.txt  DraftCraftModels.vcxproj  DraftCraftModels.vcxproj.filters
proj.draftcraft_models/CommandSystem/: AbstractCommand.h  AbstractCommandProcessor.cpp  CommandProcessor.cpp  CommandProcessor.h
proj.draftcraft_models/CommandSystem/Commands/: Commands.h  DraftAtIndexCommand.cpp  DraftSkipPileCommand.cpp
proj.draftcraft_models/Exceptions/: ModelLogicError.h
proj.draftcraft_models/MatchMaking/: IMatchMaker.h  TestMatchMaker.cpp
proj.draftcraft_models/Model/: DraftBoard.cpp  DraftBoard.h  DraftDeck.cpp  DraftDeck.h  DraftPile.cpp  DraftPile.h  FlaggableViewModel.h  GameState.cpp  GameState.h  IViewModel.h  PhaseStack.cpp  PhaseStack.h  Player.cpp  Player.h
proj.draftcraft_models/StaticData/: Card.h  GameConfig.h  IStaticDataManager.h  JsonStaticDataManager.cpp  JsonStaticDataManager.h  TestStaticDataManager.cpp  TestStaticDataManager.h
proj.draftcraft_models/ViewModel/: AbstractListenerView.h  DispatcherViewModel.cpp  DispatcherViewModel.h  IListenerView.h
proj.draftcraft_models/lib/: DraftCraftModels.idb
proj.draftcraft_models/src/CommandSystem/: AbstractCommandProcessor.h
proj.draftcraft_models/src/Exceptions/: ModelLogicError.h
proj.draftcraft_models/src/MatchMaking/: IMatchMaker.cpp  TestMatchMaker.h
proj.draftcraft_models/src/Model/: DirtyStateModel.cpp  DraftDeck.cpp  DraftDeck.h  DraftPile.h  GameState.cpp  GameState.h  PhaseStack.h  Player.cpp
(+86 files in other folders)
